challenge4/force-app/main/default/objects/Fridge_History__c/Fridge_History__c.object-meta.xml
<CustomObject>
    <label>冷蔵庫の開閉ログ</label>
    <nameField>
        <displayFormat>FH-{00000}</displayFormat>
        <label>ログ番号</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>