challenge4/force-app/main/default/objects/Fridge_History__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>取引先責任者</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>冷蔵庫の開閉履歴</relationshipLabel>
    <relationshipName>Fridge_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>