challenge4/force-app/main/default/objects/Fridge_History__c/fields/fridgeId__c.field-meta.xml
<CustomField>
    <fullName>fridgeId__c</fullName>
    <label>冷蔵庫ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>